<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="Turn">Turn</string>
    <string name="PlayerX">Player X</string>
    <string name="PlayerXName">Player X Name</string>
    <string name="PlayerO">Player O</string>
    <string name="PlayerOName">Player O Name</string>
    <string name="OK">OK</string>
    <string name="Finish">Finish</string>
    <string name="Won">Won</string>
    <string name="TieGame">Tie Game</string>
    <string name="ClickHere">Click Here</string>
    <string name="EnterPlayerNames">Enter Player Names</string>
    <string name="Play">Play</string>
    <string name="Required">Required</string>
    <string name="Score">0</string>
</resources>