<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/grey"
    tools:context=".SetPlayers">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/default_color"
        android:textSize="30sp"
        android:gravity="center"
        android:text="@string/EnterPlayerNames"
        android:textStyle="bold"/>

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="11dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout_Style"
                android:id="@+id/textInputLayoutPlayerX"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/PlayerXName"
                app:endIconMode="clear_text"
                app:startIconTint="#0c6ee8"
                app:startIconDrawable="@drawable/x_icon">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout_Style"
                android:id="@+id/textInputLayoutPlayerO"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:hint="@string/PlayerOName"
                app:endIconMode="clear_text"
                app:startIconTint="#ffc708"
                app:startIconDrawable="@drawable/o_icon">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputEditText_Style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="12"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/Button_Style"
                android:id="@+id/buttonPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:textColor="@color/white"
                android:text="@string/Play" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>